content/_generated-doc/2.7/config/quarkus-logging-gelf.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-logging-gelf_configuration]]link:#quarkus-logging-gelf_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.enabled]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.enabled[quarkus.log.handler.gelf.enabled]`

[.description]
--
Determine whether to enable the GELF logging handler
--|boolean 
|`false`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.host]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.host[quarkus.log.handler.gelf.host]`

[.description]
--
Hostname/IP-Address of the Logstash/Graylog Host By default it uses UDP, prepend tcp: to the hostname to switch to TCP, example: "tcp:localhost"
--|string 
|`localhost`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.port]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.port[quarkus.log.handler.gelf.port]`

[.description]
--
The port
--|int 
|`12201`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.version]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.version[quarkus.log.handler.gelf.version]`

[.description]
--
GELF version: 1.0 or 1.1
--|string 
|`1.1`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.extract-stack-trace]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.extract-stack-trace[quarkus.log.handler.gelf.extract-stack-trace]`

[.description]
--
Whether to post Stack-Trace to StackTrace field.
--|boolean 
|`true`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.stack-trace-throwable-reference]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.stack-trace-throwable-reference[quarkus.log.handler.gelf.stack-trace-throwable-reference]`

[.description]
--
Only used when `extractStackTrace` is `true`. A value of 0 will extract the whole stack trace. Any positive value will walk the cause chain: 1 corresponds with exception.getCause(), 2 with exception.getCause().getCause(), ... Negative throwable reference walk the exception chain from the root cause side: -1 will extract the root cause, -2 the exception wrapping the root cause, ...
--|int 
|`0`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.filter-stack-trace]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.filter-stack-trace[quarkus.log.handler.gelf.filter-stack-trace]`

[.description]
--
Whether to perform Stack-Trace filtering
--|boolean 
|`false`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.timestamp-pattern]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.timestamp-pattern[quarkus.log.handler.gelf.timestamp-pattern]`

[.description]
--
Java date pattern, see `java.text.SimpleDateFormat`
--|string 
|`yyyy-MM-dd HH:mm:ss,SSS`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.level]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.level[quarkus.log.handler.gelf.level]`

[.description]
--
The logging-gelf log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.facility]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.facility[quarkus.log.handler.gelf.facility]`

[.description]
--
Name of the facility.
--|string 
|`jboss-logmanager`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.include-full-mdc]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.include-full-mdc[quarkus.log.handler.gelf.include-full-mdc]`

[.description]
--
Whether to include all fields from the MDC.
--|boolean 
|`false`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.maximum-message-size]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.maximum-message-size[quarkus.log.handler.gelf.maximum-message-size]`

[.description]
--
Maximum message size (in bytes). If the message size is exceeded, the appender will submit the message in multiple chunks.
--|int 
|`8192`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.include-log-message-parameters]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.include-log-message-parameters[quarkus.log.handler.gelf.include-log-message-parameters]`

[.description]
--
Include message parameters from the log event
--|boolean 
|`true`


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.include-location]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.include-location[quarkus.log.handler.gelf.include-location]`

[.description]
--
Include source code location
--|boolean 
|`true`


h|[[quarkus-logging-gelf_quarkus.log.handler.gelf.additional-field-post-additional-fields]]link:#quarkus-logging-gelf_quarkus.log.handler.gelf.additional-field-post-additional-fields[Post additional fields]

h|Type
h|Default

a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.additional-field.-field-name-.value]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.additional-field.-field-name-.value[quarkus.log.handler.gelf.additional-field."field-name".value]`

[.description]
--
Additional field value.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-logging-gelf_quarkus.log.handler.gelf.additional-field.-field-name-.type]]`link:#quarkus-logging-gelf_quarkus.log.handler.gelf.additional-field.-field-name-.type[quarkus.log.handler.gelf.additional-field."field-name".type]`

[.description]
--
Additional field type specification. Supported types: String, long, Long, double, Double and discover. Discover is the default if not specified, it discovers field type based on parseability.
--|string 
|`discover`

|===